openshift/projects/openshift-infra/routes/hawkular-metrics.yml
apiVersion: v1
kind: Route
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Route","metadata":{"annotations":{},"labels":{"metrics-infra":"hawkular-metrics"},"name":"hawkular-metrics","namespace":"openshift-infra"},"spec":{"host":"hawkular-metrics.apps008.amosdemo.io","tls":{"destinationCACertificate":"-----BEGIN CERTIFICATE-----\nMIIC5jCCAc6gAwIBAgIBATANBgkqhkiG9w0BAQsFADAkMSIwIAYDVQQDDBltZXRy\naWNzLXNpZ25lckAxNTM3NTMyNDI0MB4XDTE4MDkyMTEyMjAyNFoXDTIzMDkyMDEy\nMjAyNVowJDEiMCAGA1UEAwwZbWV0cmljcy1zaWduZXJAMTUzNzUzMjQyNDCCASIw\nDQYJKoZIhvcN [...]
  creationTimestamp: null
  labels:
    metrics-infra: hawkular-metrics
  name: hawkular-metrics
spec:
  host: hawkular-metrics.apps008.amosdemo.io
  tls:
    destinationCACertificate: |
      -----BEGIN CERTIFICATE-----
      MIIC5jCCAc6gAwIBAgIBATANBgkqhkiG9w0BAQsFADAkMSIwIAYDVQQDDBltZXRy
[...]
      vVAYC+q5NVi/axKyxeuZQVC1fWN9cIEUzSY=
      -----END CERTIFICATE-----
    termination: reencrypt
  to:
    kind: Service
    name: hawkular-metrics
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: 2018-09-21T12:21:42Z
      status: "True"
      type: Admitted
    host: hawkular-metrics.apps008.amosdemo.io
    routerName: router
    wildcardPolicy: None
